@@ -25,3 +25,4 @@ bugtracker.web    = https://github.com/frioux/Catalyst-Controller-Accessors/issu
 Test::More = 0.94
 Moose      = 2.0205
 Test::Fatal = 0.006
+Check::ISA = 0.04
